--- a/design/templates/OpenGame/chat_body.tpl.html
+++ b/design/templates/OpenGame/chat_body.tpl.html
@@ -11,7 +11,7 @@
 <table id="chat_box">
   <tr>
     <th>
-      <div id="shoutbox" style="margin: 5px; vertical-align: text-top; height: 380px; overflow-x: auto; overflow-y: hidden;"></div>
+      <div id="shoutbox"></div>
     </th>
   </tr>
 
