--- a/design/templates/OpenGame/navbar.tpl.html
+++ b/design/templates/OpenGame/navbar.tpl.html
@@ -99,7 +99,10 @@
       <div class="contF flexW header" id="navbar_planet_wrapper">
         <select size="1" onchange="changePlanet(this);" id="navbar_planet_select" style="max-width: 20em">
           <!-- BEGIN topnav_planets -->
-          <option {topnav_planets.SELECTED} value="{topnav_planets.ID}">{topnav_planets.COORDS}&nbsp;{topnav_planets.TYPE_TEXT}&nbsp;{topnav_planets.NAME}</option>
+          <option {topnav_planets.SELECTED} value="{topnav_planets.ID}">
+            <!-- IF topnav_planets.IS_MOON -->&#9789;<!-- ELSEIF topnav_planets.IS_CAPITAL -->&#9813;<!-- ENDIF -->
+            {topnav_planets.COORDS}&nbsp;{topnav_planets.TYPE_TEXT}&nbsp;{topnav_planets.NAME}
+          </option>
           <!-- END topnav_planets -->
         </select>
 
