NEWS-misc-43a13.35: Changed color of link in news to light blue for better visibility

--- a/design/templates/OpenGame/_template.css
+++ b/design/templates/OpenGame/_template.css
@@ -3396,7 +3396,7 @@ input[type=checkbox] {
   color: red;
 }
 .news_link {
-  color: green;
+  color: #ade;
 }
 .survey_header, .survey_voted {
   background-color: #233452;
