ECO-misc-43a13.36: Changed Research page a bit

--- a/design/templates/OpenGame/buildings_builds.tpl.html
+++ b/design/templates/OpenGame/buildings_builds.tpl.html
@@ -186,6 +186,10 @@ planet = {
 <!-- DEFINE $QUE_ID = '{QUE_ID}' -->
 <!-- INCLUDE eco_queue -->
 
+<!-- IF $QUE_ID == QUE_RESEARCH -->
+<h2><a class="link" href="index.php?page=techtree#tab_tech_tree_100">{L_eco_bld_research_page_novapedia}</a></h2>
+<!-- ENDIF -->
+
 <table class="markup" width="100%">
 <tr>
   <td align="center" valign="top">
