DESIGN-misc-43a13.39: Added DB patch version info into some places

--- a/design/templates/OpenGame/server_info.tpl.html
+++ b/design/templates/OpenGame/server_info.tpl.html
@@ -200,11 +200,11 @@
   <tr><td class="c" colspan="2">{L_adm_ver_versions}</td></tr>
   <tr>
     <th>{L_adm_ver_version_sn}</th>
-    <th>{D_SN_VERSION}</th>
+    <th>{D_SN_VERSION}-{DB_PATCH_VERSION}</th>
   </tr>
   <tr>
     <th>{L_adm_ver_version_db}</th>
-    <th>{C_db_version}</th>
+    <th>{C_db_version}p{DB_PATCH_VERSION}</th>
   </tr>
 
 </tbody></table>
