PLAYER-feat-43a14.3: Refactored and reworked design for Player Settings page

--- a/design/templates/OpenGame/_template.css
+++ b/design/templates/OpenGame/_template.css
@@ -3890,3 +3890,10 @@ td.error_message {
   margin-left: 1em;
   cursor: pointer;
 }
+
+.options_block_header {
+}
+
+.option_block_option {
+  text-align: left;
+}
