--- a/design/templates/OpenGame/fleet2.tpl.html
+++ b/design/templates/OpenGame/fleet2.tpl.html
@@ -84,6 +84,7 @@ var fleet_slide_changing = false;
     <!-- ENDIF -->
     <tr><th class="c_c">
       <div class="warning fleet_expedition_warning">{L_fl_expe_warning}</div>
+      <div class="error fleet_expedition_not_enough_fuel">{L_fl_not_enough_fuel}</div>
       <input id="fleet_page2_submit" value="{L_fl_continue}" type="submit"<!-- IF $CANNOTSEND --> disabled<!-- ENDIF -->/>
     </th></tr>
   </table>
