UNIVERSE-feat-43a15.30: Reworked Universe Navigation panel. Also in scan mode horizontal scroller is back in Chrome 65

--- a/design/templates/OpenGame/_page_20_header.tpl.html
+++ b/design/templates/OpenGame/_page_20_header.tpl.html
@@ -165,7 +165,7 @@
         <!-- INCLUDE menu -->
         </td>
       <!-- ENDIF -->
-        <td align="center" valign="top" width="100%">
+        <td align="center" valign="top" width="100%" id="__content_cell">
 
 <!-- DEFINE $NAVBAR_VERTICAL = 0 -->
 
