--- a/design/css/global.css
+++ b/design/css/global.css
@@ -463,20 +463,7 @@ tr.highlight.notice:hover {
 
 
 /* ---------- FIX for Google Chrome v65 */
-
-/*html,*/
-/*body,*/
-/*#__page,*/
-/*#__page > table.markup,*/
-/*#__page > table.markup > tbody,*/
-#__page > table.markup > tbody > tr > td:nth-child(2)
-/*#__navbar_wrapper*/
-/*#__content_wrapper*/
-/*#__addition_wrapper*/
-/*#__content*/
+#__content_cell
 {
-
-  /*border: 1px solid red;*/
-  overflow-y: auto;
-  /*max-width: 88vw;*/
+  overflow-x: auto;
 }
