NEWS-misc-43a18.17: Adjusted previous commit

--- a/design/templates/OpenGame/news_list.tpl.html
+++ b/design/templates/OpenGame/news_list.tpl.html
@@ -93,7 +93,7 @@
             <!-- IF MM_MODULE_ACTIVE && AUTHLEVEL >= 3 -->
             <td class="c_r">{survey_votes.MM|num|format}</td>
             <td class="c_r">{survey_votes.PERCENT_MM|num|format}%</td>
-            <td class="c_r">{survey_votes.USD|num|format}</td>
+            <td class="c_r">{survey_votes.MONEY|num|format}</td>
             <td class="c_r">{survey_votes.PERCENT_MONEY|num|format}%</td>
             <!-- ENDIF -->
           </tr>
